# submission

./: .gitignore  Cargo.toml  README.md  flake.nix
backend/: Cargo.toml  default.nix  integration_test.rs
backend/src/: api.rs  db.rs  error.rs  lib.rs
frontend/: default.nix  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  types.ts
frontend/src/views/: Home.vue  ProblemDetail.vue  StatCard.vue  StudentView.vue  SubmissionDetail.vue  TeacherView.vue
nix/: service.nix
src/: api.rs  db.rs  main.rs
tests/: integration_test.rs
