[package]
name = "submission"
version = "0.1.0"
edition = "2024"

[lib]
name = "submission"
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.6.0"
derive_more = "2.0.1"
turso = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
sha2 = "0.10"
